# zipkirei

./: Cargo.toml  README.md  README_ja.md
.github/workflows/: cd.yml  ci.yml
src/: cli.rs  lib.rs  main.rs
src/zip/: bytes.rs  cd_entry.rs  copy.rs  eocd.rs  error.rs  inplace.rs  local_header.rs  mod.rs  options.rs  plan.rs  tests.rs  write_new.rs
